--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.9.0"
+    "eslint-plugin-react": "^6.9.0",
+    "sass-lint": "^1.10.2"
   }
 }
