--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "css-loader": "^0.28.4",
     "lodash": "^4.17.4",
+    "node-sass": "^4.5.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-rating": "^0.3.0",
@@ -35,6 +37,8 @@
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.18.1",
     "webpack": "^2.5.1"
   },
   "engines": {
