--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-autobind": "^1.0.6",
+    "react-click-outside": "^2.3.1",
     "react-dom": "^15.4.2",
     "react-rating": "^0.3.0",
     "react-redux": "^5.0.1",
