--- a/test/fixtures/bulletins.yml
+++ b/test/fixtures/bulletins.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: bulletins
+#
+#  id         :integer          not null, primary key
+#  pool_id    :integer          not null
+#  body       :string           not null
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
