--- a/test/fixtures/game_nfls.yml
+++ b/test/fixtures/game_nfls.yml
@@ -12,6 +12,7 @@
 #  completed  :boolean          default("false"), not null
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  start_time :date             not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
