--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.1.0",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.1",
