add identifier to pool

--- a/test/fixtures/pools.yml
+++ b/test/fixtures/pools.yml
@@ -12,6 +12,7 @@
 #  created_at      :datetime         not null
 #  updated_at      :datetime         not null
 #  password_digest :string           not null
+#  identifier      :string           not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
