--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-autobind": "^1.0.6",
     "react-click-outside": "^2.3.1",
     "react-dom": "^15.4.2",
+    "react-modal": "^2.0.2",
     "react-rating": "^0.3.0",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
