set up jobs, add results column to picks

--- a/test/fixtures/picks.yml
+++ b/test/fixtures/picks.yml
@@ -9,6 +9,7 @@
 #  pick       :string           not null
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  is_correct :string           default("pending")
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
