--- a/test/fixtures/game_nfls.yml
+++ b/test/fixtures/game_nfls.yml
@@ -15,6 +15,7 @@
 #  start_time :datetime         not null
 #  spread     :integer
 #  line       :integer
+#  evaluated  :boolean          default("false"), not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
