--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/davidhu2000/myonlinepool#readme",
   "dependencies": {
+    "@trainline/react-skeletor": "^0.1.4",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
