--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "compression-webpack-plugin": "^0.4.0",
     "lodash": "^4.17.4",
-    "node-sass": "^4.5.3",
     "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-alert": "^2.1.2",
@@ -43,8 +43,6 @@
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.1.0",
-    "sass-loader": "^6.0.5",
-    "style-loader": "^0.18.1",
     "webpack": "^2.5.1"
   },
   "engines": {
