add payment info columns to pools and annotated

--- a/test/fixtures/weekly_result_nfls.yml
+++ b/test/fixtures/weekly_result_nfls.yml
@@ -10,6 +10,7 @@
 #  correct_picks :integer
 #  created_at    :datetime         not null
 #  updated_at    :datetime         not null
+#  wrong_picks   :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
