--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-rating": "^0.3.0",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "react-spinkit": "^3.0.0",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.1.0",
