--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-spinkit": "^3.0.0",
+    "react-spinners": "^0.0.18",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.1.0",
