--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@trainline/react-skeletor": "^0.1.4",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.6",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "lodash": "^4.17.4",
