--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "heroku-postbuild": "NODE_ENV=production webpack --config webpack.config.prod.js",
     "lint": "./node_modules/.bin/eslint . --ext .js,.jsx",
     "lint-fix": "./node_modules/.bin/eslint . --ext .js,.jsx --fix",
-    "test": "$npm_execpath run lint"
+    "test": "npm run lint"
   },
   "repository": {
     "type": "git",
