--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "heroku-postbuild": "NODE_ENV=production webpack --config webpack.config.prod.js",
-    "lint": "./node_modules/.bin/eslint . --ext .js,.jsx",
-    "lint-fix": "./node_modules/.bin/eslint . --ext .js,.jsx --fix",
+    "lint": "./node_modules/.bin/eslint ./frontend --ext .js,.jsx",
+    "lint-fix": "./node_modules/.bin/eslint ./frontend --ext .js,.jsx --fix",
     "test": "npm run lint"
   },
   "repository": {
