--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "heroku-postbuild": "NODE_ENV=production webpack --config webpack.config.prod.js",
+    "heroku-postbuild": "NODE_ENV=development webpack --config webpack.config.js",
     "lint": "./node_modules/.bin/eslint ./frontend --ext .js,.jsx",
     "lint-fix": "./node_modules/.bin/eslint ./frontend --ext .js,.jsx --fix",
     "test": "npm run lint"
