--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "heroku-postbuild": "NODE_ENV=production webpack --config webpack.config.prod.js",
     "lint": "./node_modules/.bin/eslint ./frontend --ext .js,.jsx",
     "lint-fix": "./node_modules/.bin/eslint ./frontend --ext .js,.jsx --fix",
-    "test": "npm run lint"
+    "test": "npm run lint",
+    "aws": "NODE_ENV=production ./node_modules/.bin/webpack --config webpack.config.prod.js"
   },
   "repository": {
     "type": "git",
