--- a/.ebextensions/03_container_commands.config
+++ b/.ebextensions/03_container_commands.config
@@ -1,6 +1,7 @@
 commands:
   01_npm_install:
     command: 'npm install'
+    cwd: '/home/webapp'
     leader_only: 'false'
   02_webpack:
     command: 'npm run aws'
