--- a/.ebextensions/03_container_commands.config
+++ b/.ebextensions/03_container_commands.config
@@ -1,7 +1,14 @@
 commands:
+  01_node_install:
+    # run this command from /tmp directory
+    cwd: /tmp
+    # don't run the command if node is already installed (file /usr/bin/node exists)
+    test: '[ ! -f /usr/bin/node ] && echo "node not installed"'
+    # install from epel repository
+    # flag -y for no-interaction installation
+    command: 'yum install -y nodejs --enablerepo=epel'
   01_npm_install:
     command: 'npm install'
-    cwd: '/home/webapp'
     leader_only: 'false'
   02_webpack:
     command: 'npm run aws'
