add test command

--- a/.ebextensions/03_container_commands.config
+++ b/.ebextensions/03_container_commands.config
@@ -6,7 +6,9 @@ commands:
     test: '[ ! -f /usr/bin/node ] && echo "node not installed"'
     # install from epel repository
     # flag -y for no-interaction installation
-    command: 'yum install -y nodejs --enablerepo=epel; ls -a;'
+    command: 'yum install -y nodejs --enablerepo=epel'
+  02_test:
+    command: 'ls -a';
   02_npm_install:
     command: 'npm install'
     leader_only: 'false'
