--- a/.ebextensions/03_container_commands.config
+++ b/.ebextensions/03_container_commands.config
@@ -8,7 +8,7 @@ commands:
     # flag -y for no-interaction installation
     command: 'yum install -y nodejs --enablerepo=epel'
   02_test:
-    command: 'ls -a';
+    command: 'ls -a'
   02_npm_install:
     command: 'npm install'
     leader_only: 'false'
