--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -23,4 +23,6 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
-  
+
+development: 
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
