--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "webpack": "^2.5.1"
   },
   "engines": {
-    "node": "4.1.1",
-    "npm": "2.1.x"
+    "node": "6.9.5",
+    "npm": "3.10.10"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
