--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,21 @@
 {
-  "presets": ["env", "react"]
+  "env": {
+    "production": {
+      "presets": ["env", "react"],
+      "plugins": [
+        [
+          "transform-react-remove-prop-types",
+          {
+            "mode": "remove",
+            "removeImport": "true",
+            "ignoreFilenames": ["node_modules"]
+          }
+        ],
+        "lodash"
+      ]
+    },
+    "development": {
+      "presets": ["env", "react"]
+    }
+  }
 }
