--- a/package.json
+++ b/package.json
@@ -28,8 +28,13 @@
   "dependencies": {
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-react-optimize": "^1.0.1",
     "lodash": "^4.17.4",
+    "lodash-webpack-plugin": "^0.11.4",
     "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-alert": "^2.1.2",
