--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
   "dependencies": {
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
+    "babel-plugin-closure-elimination": "^1.1.16",
     "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-transform-react-inline-elements": "^6.22.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.6",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
@@ -50,7 +53,7 @@
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.1.0",
-    "webpack": "^4.8.3"
+    "webpack": "^2.5.1"
   },
   "engines": {
     "node": "6.9.5",
