Revert "babel and webpack reconfig"
This reverts commit 28071a2f690a0b9344218ff58a11c74fc9134352.

--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,23 @@
 {
-  "presets": ["env", "react"]
+  "env": {
+    "production": {
+      "presets": ["es2015", "react", "env", "react-optimize"],
+      "plugins": [
+        [
+          "transform-react-remove-prop-types",
+          {
+            "mode": "remove",
+            "removeImport": "true",
+            "ignoreFilenames": ["node_modules"]
+          }
+        ],
+        "lodash",
+        "transform-react-inline-elements",
+        "closure-elimination"
+      ]
+    },
+    "development": {
+      "presets": ["es2015", "react"]
+    }
+  }
 }
